added scrutinizer configuratio; updated travis configuration to send coverage results to scrutinizer

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ before_script:
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install --dev
 
+script: 
+  - phpunit --coverage-clover=coverage.clover
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
 notifications:
   email:
     - info@redkite-labs.com
-
-#script: phpunit --coverage-text
