removed minimum stability flag

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,5 @@
         "psr-0": { "RedKiteCms\\Block\\TwitterBootstrapBundle": ""
         }
     },
-    "target-dir" : "RedKiteCms/Block/TwitterBootstrapBundle",
-    "minimum-stability": "dev"
+    "target-dir" : "RedKiteCms/Block/TwitterBootstrapBundle"
 }
